# mini_stereo_vo

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: run_kitti.cpp.0B442EF693BBDEA0.idx
app/: run_kitti.cpp
docs/: camera.md  dataset_kitti.md  estimator.md  feature.md  frame.md  frontend.md  map.md  map_point.md  overview.md  pose_writer.md  stereo_initializer.md  tracker.md  viewer.md
include/svo/: camera.h  dataset_kitti.h  estimator.h  feature.h  frame.h  frontend.h  geometry.h  map.h  map_point.h  motion_model.h  pose_writer.h  rerun_viewer.h  stereo_initializer.h  tracker.h  viewer.h  viewer_status.h
scripts/: bootstrap_ubuntu2404.sh  eval_kitti.sh  generate_vis.py  make_tracking_gif.py  run_regression.sh
src/: camera.cpp  dataset_kitti.cpp  estimator.cpp  frontend.cpp  map.cpp  motion_model.cpp  pose_writer.cpp  rerun_viewer.cpp  stereo_initializer.cpp  tracker.cpp  viewer.cpp
tests/: test_geometry.cpp
